EfficiencyCode-rs/tui/src/chatwidget/snapshots/EfficiencyCode_tui__chatwidget__tests__slash_export_filename_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
▌ Save conversation
▌
▌ EfficiencyCode-session-00000000-0000-0000-0000-000000000123.md

Press enter to confirm or esc to go back
